# recursive

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  providers.toml
.cargo/: config.toml  mutants.toml
.dev/: AGENTS.md  HANDOFF-2026-07-05-arch-review.md  HANDOFF-2026-07-05-p1-followup.md  HANDOFF-2026-07-06-arch-review-wrap.md  HANDOFF-2026-07-06-p1-3-and-big-refactor.md  OPERATIONS.md  README.md  ROADMAP-v2-draft.md  ROADMAP-v2.md  ROADMAP-v3.md  ROADMAP-v4.md  ROADMAP.md  VALIDATION.md  dashboard.html  loop-state.md  mutant-debt-20260701.md  mutant-debt-20260709-agent.md  pricing.yaml
.dev/flows/: .gitignore  SELF_IMPROVE.md  package.json  self-improve.flow.js
.dev/goals/: 01-count-lines-tool.md  02-anti-stuck-heuristic.md  03-provider-retry.md  04-token-usage.md  05-apply-patch-unified-tolerance.md  06-cost-estimation.md  07-transcript-limit.md  08-persistent-transcripts.md  09-transcript-replay.md  10-shell-cwd.md  100-tool-rename-and-glob.md  100-tui-splash.md  101-tui-plan-mode.md  102-multi-agent-pool.md  103-multi-shared-memory.md  104-multi-messaging-bus.md  105-multi-pipeline.md  106-multi-team-orchestrator.md  107-session-jsonl-writer.md  108-session-wire-agent.md  108a-agent-message-callback.md  108b-session-cli-flag.md  109-session-cli-commands.md  11-search-files-tool.md  110-memory-layer0-context.md  110b-memory-layer0-complete.md  111-memory-layer1-scratchpad.md  112-memory-layer2-semantic.md  113-memory-layer3-episodic.md  114-self-review-pipeline.md  115-structured-tracing.md  116-cost-tracker-persist.md  117-transcript-export.md  118-wire-cost-tracker.md  119-sessions-export.md  12-default-system-prompt.md  120-graceful-shutdown.md  121-rate-limiting.md  122-prometheus-metrics.md  123-event-sink-trait.md  (+327 more)
.dev/issues/: ci-push-hook-test-failures.md
.dev/journal/: analysis-20260621-code-audit.md  analysis-20260621-round2.md  analysis-20260621-round3.md  analysis-20260622-round4.md  g346-flow-watchdog.md  manual-20260601-goal165-plan-mode-2.md  manual-20260601-goal166-plan-mode-http-sdk.md  manual-20260601-goal167-todo-write.md  manual-20260601-goal168.md  manual-20260601-goal169.md  manual-20260601-plan-mode-v2-design.md  manual-20260602-a2a-call-tool.md  manual-20260602-a2a-goals-177-179.md  manual-20260602-e2e-ts-sdk-compaction.md  manual-20260602-fix-tui-plan-mode-deadlock.md  manual-20260602-fork-session.md  manual-20260602-goal-189-e2b-provider.md  manual-20260602-goal-190-integration-tests.md  manual-20260602-goal-201-202.md  manual-20260602-goal-212.md  manual-20260602-goal-213-run-core-split.md  manual-20260602-goal169-tui-skill-commands.md  manual-20260602-goal170-true-abort.md  manual-20260602-goal171-resume-picker.md  manual-20260602-goal211-split-app-rs.md  manual-20260602-goal214-file-split.md  manual-20260602-hook-system-v2-and-file-split.md  (+456 more)
.dev/scripts/: e2e-run.sh  (+21 more)
.flowcast/: agents.json  gates.json
.githooks/: pre-push
crates/agui-client/: Cargo.toml  README.md
crates/agui-client/src/: lib.rs  tests.rs
crates/agui-protocol/: Cargo.toml  README.md
crates/agui-protocol/src/: events.rs  input.rs  lib.rs  sse.rs
crates/agui-tui/: Cargo.toml  README.md
crates/agui-tui/src/: app.rs  lib.rs  main.rs  ui.rs
crates/recursive-cli/: Cargo.toml
crates/recursive-cli/src/: main.rs  otel.rs
crates/recursive-cli/src/cli/: builder.rs  claude_json.rs  control.rs  init.rs  mod.rs  output.rs  resume.rs
crates/recursive-tui/: Cargo.toml
crates/recursive-tui/src/: app.rs  backend.rs  bash.rs  commands.rs  completion.rs  cost.rs  events.rs  harness.rs  input_state.rs  keymap.rs  lib.rs  main.rs  model.rs  ollama_probe.rs  runtime_builder.rs  skill_commands.rs  supervise_sop.md
crates/recursive-tui/src/app/: commands.rs  event_loop.rs  mod.rs  render.rs  state.rs
crates/recursive-tui/src/ui/: chat.rs  command_menu.rs  diff.rs  input.rs  markdown.rs  mod.rs  modal.rs  plan_review.rs  spinner.rs  splash.rs  status.rs  theme.rs  transcript.rs
crates/recursive-tui/tests/: backend_smoke.rs  pty_regression.rs
crates/tui-pty-harness/: Cargo.toml
crates/tui-pty-harness/src/: lib.rs  main.rs
docs/: INTERNALS.md  tui-acceptance-checklist.md  tui-fake-cc-gap.md
e2e/: .env.example  ASSERT_STEP_REQUIREMENT.md  Dockerfile  acp_verify.py  e2e.yaml  run-e2e.sh
examples/: basic.rs  with_hooks.rs  with_mcp.rs  with_skills.rs  with_tools.rs
local_doc/: website-review-20260603.md  website-review-final-20260603.md  website-review-v2-20260603.md
scripts/: build-dep-graph.sh  check-file-sizes.sh  check-new-deps.sh  localstack-init.sh
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: 01_prompt.py  02_multi_turn.py  03_plan_mode.py  04_goal_loop.py  05_slash_commands.py  README.md
sdk/python/recursive_client/: __init__.py  client.py  models.py
sdk/python/recursive_sdk/: __init__.py  _http.py  agent.py  binary.py  cli.py  control_session.py  exceptions.py  models.py  query.py  run.py  wire.py
sdk/python/tests/: test_agent.py  test_cli.py  test_client.py  test_query.py  test_run_stream_event.py
src/: agent.rs  atomic.rs  checkpoint.rs  checkpoint_log.rs  compact.rs  config.rs  config_file.rs  coordinator.rs  cost.rs  error.rs  event.rs  hooks.rs  http.rs  kernel.rs  lib.rs  logging.rs  main.rs  mcp.rs  mcp_server.rs  message.rs  migrate.rs  multi.rs  paths.rs  permissions.rs  providers.rs  providers_cache.rs  rewind.rs  run_core.rs  runner.rs  runtime.rs  runtime_goal.rs  session.rs  session_lock.rs  skills.rs  skills_injector.rs  storage.rs  system_prompt.rs  tasks.rs  team.rs  test_util.rs  (+2 more)
tests/: agent_team_integration.rs  agui_e2e.rs  anthropic_smoke.rs  checkpoint_e2e.rs  compact_boundary.rs  deferred_tool_loading.rs  http.rs  incremental_writes.rs  integration.rs  invariants.rs  mcp_e2e.rs  mcp_integration.rs  orphan_resume.rs  resume_by_id.rs  smoke.rs  tui_backend_smoke.rs  usage_tracking.rs  uuid_chain.rs  v050_integration.rs  v060_storage_integration.rs
website/: index.md  package.json  pnpm-lock.yaml
(+647 files in other folders)
