[workspace]
members = ["crates/recursive-tui"]

[package]
name = "recursive-agent"
version = "0.5.0"
edition = "2021"
authors = ["Jeff Kit"]
description = "A minimal, orthogonal, self-improving coding agent kernel in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeffkit/recursive"
homepage = "https://github.com/jeffkit/recursive"
documentation = "https://docs.rs/recursive-agent"
keywords = ["agent", "llm", "ai", "coding-agent", "mcp"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.75"
exclude = [".dev/", "journal/", "goals/"]
[features]
default = ["cli", "mcp", "web_fetch", "anthropic", "http"]
cli = ["dep:clap", "dep:tracing-subscriber", "dep:anyhow"]
test-utils = []
mcp = ["dep:futures-util"]
web_fetch = []
anthropic = []
http = ["dep:axum", "dep:tower-http", "dep:tokio-stream", "dep:futures-util"]

[lib]
name = "recursive"
path = "src/lib.rs"

[[bin]]
name = "recursive"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "io-std", "time", "signal", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = { version = "1", optional = true }
thiserror = "2"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
walkdir = "2"
regex = "1"
blake3 = "1"
futures-util = { version = "0.3.32", optional = true }
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3"
tracing-test = "0.2"
recursive-agent = { path = ".", features = ["test-utils"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.dev]
opt-level = 0
debug = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["test-utils"]

[[example]]
name = "with_tools"
path = "examples/with_tools.rs"
required-features = ["test-utils"]

[[example]]
name = "with_hooks"
path = "examples/with_hooks.rs"
required-features = ["test-utils"]

[[example]]
name = "with_mcp"
path = "examples/with_mcp.rs"
required-features = []

[[example]]
name = "with_skills"
path = "examples/with_skills.rs"
required-features = []
