[package]
name = "agui-client"
version = "0.1.0"
edition = "2021"
description = "HTTP/SSE client for AG-UI agents."
license = "MIT"
repository = "https://github.com/jeffkit/recursive"

[dependencies]
agui-protocol = { path = "../agui-protocol" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
serde_json = "1"
thiserror = "2"
url = "2"
futures-util = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
wiremock = "0.6"
