[package]
name = "recursive-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for the Recursive coding agent"

[lib]
name = "recursive_tui"
path = "src/lib.rs"

[[bin]]
name = "recursive-tui"
path = "src/main.rs"

[dependencies]
recursive-agent = { path = "../.." }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

[dev-dependencies]
recursive-agent = { path = "../..", features = ["test-utils"] }
