[package]
name = "recursive-tui"
version = "0.7.0"
edition = "2021"
rust-version = "1.75"
description = "Interactive terminal UI for the Recursive agent"
license = "MIT"

[[bin]]
name = "recursive-tui"
path = "src/main.rs"

[dependencies]
recursive = { package = "recursive-agent", path = "../..", default-features = false, features = ["mcp", "web_fetch", "web_search", "anthropic", "http", "skill-hub"] }
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
pulldown-cmark = { version = "0.12", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "time", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
futures-util = "0.3"
async-trait = "0.1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
# Enables the kernel's test-utils (MockProvider etc.) for the TUI's own
# test suite so `cargo test -p recursive-tui` is self-contained — no
# `--features recursive/test-utils` CLI flag needed. Required by the
# in-process harness workflow (see src/harness.rs).
recursive = { package = "recursive-agent", path = "../..", features = ["test-utils"] }

[features]
default = ["skill-hub"]
skill-hub = ["recursive/skill-hub"]
weixin = ["recursive/weixin"]
