[project]
name = "recursive-sdk"
version = "0.6.0"
description = "Python SDK for the Recursive Agent — compatible with Claude Agent SDK patterns"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["recursive", "agent", "sdk", "ai", "coding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["recursive_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
